--- a/views/student-dashboard.html
+++ b/views/student-dashboard.html
@@ -6,8 +6,6 @@
   <title>Student Dashboard - Mess Management System</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="N:\Internal Hackathon\mess-management-system\public\css\styles.css"> -->
-
 </head>
 <body>
   <div class="dashboard-container">
@@ -54,6 +52,13 @@
       </div>
     </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3.2.0/dist/email.min.js"></script>
+  <script>
+    (function () {
+      emailjs.init("YOUR_USER_ID"); // Replace with your EmailJS user ID
+    })();
+  </script>
 
   <script src="/js/student-dashboard.js"></script>
 </body>
