--- a/views/student-dashboard.html
+++ b/views/student-dashboard.html
@@ -13,7 +13,9 @@
       <h1>Student Dashboard</h1>
       <p>Manage your meals with ease!</p>
     </div>
-
+    <div class="logout-container">
+      <button id="logoutButton" class="btn btn-danger">Logout</button>
+    </div>
     <div class="row meal-cards">
       <!-- Breakfast -->
       <div class="col-md-4">
